# pia-pia

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml  requirements.txt
piapia/: __init__.py  __main__.py
piapia/bot/: __init__.py  helper.py  piapia_bot.py
piapia/bot/cogs/: __init__.py  admin_cog.py  audio_cog.py
piapia/config/: __init__.py  logging_config.py  settings.py
piapia/domain/: __init__.py  sessions.py
piapia/sinks/: __init__.py  audio_archiver.py  discord_sink.py
piapia/utils/: __init__.py  commandline.py  session_paths.py
src/: main.py
src/bot/: helper.py  piapia_bot.py
src/bot/cogs/: admin_cog.py  audio_cog.py  pdf_cog.py
src/config/: logging_config.py  settings.py
src/models/: transcription.py
src/sinks/: audio_archiver.py  audio_buffer.py  discord_sink.py  filters.py  transcriber.py
src/utils/: commandline.py  pdf_generator.py  whisper_preload.py
tests/: conftest.py  test_audio_archiver.py  test_commandline.py  test_session_paths.py  test_sessions.py
