[project]
name = "pia-pia"
version = "0.1.0"
description = "Pia-Pia Bot - Discord voice recorder"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-cord[voice]>=2.7.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "pynacl>=1.6.2",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
include = ["piapia*"]
exclude = ["config*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["piapia"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]